# smartmet-verify-model-data-loader

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Dockerfile.dev.dockerignore  Makefile  README.md  compose.yaml  fetch_to_verif.py  load_model_data.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_verif.sh
.github/: dependabot.yml
.github/problem-matchers/: bandit.json  mypy.json  pylint.json
.github/workflows/: audit.yaml  lint.yaml  publish.yaml  test.yaml  update-python-version.yaml
main/: fetch_to_verif.py  verif_loader.py
src/smartmet_verify_model_data_loader/: __init__.py  __main__.py  _core.py
tests/: test_core.py  test_io.py
